--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 	</head>
-	<body></body>
+	<body>
+		<nav>
+			<div class="left">logo</div>
+			<div class="right">menus</div>
+		</nav>
+	</body>
 </html>
