--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 	<body>
 		<nav>
 			<div class="left">logo</div>
-			<div class="right">menus</div>
+			<div class="right">
+				<ul>
+					<li>Home</li>
+					<li>Products</li>
+					<li>About</li>
+					<li>Contacts</li>
+				</ul>
+			</div>
 		</nav>
 	</body>
 </html>
