--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<link rel="favicon" href="" />
+		<link rel="stylesheet" href="home.css" />
+		<title>COMPUTEX</title>
 	</head>
 	<body>
 		<nav>
@@ -16,7 +18,156 @@
 					<li>Contacts</li>
 				</ul>
 				<div class="cardicon">cart here</div>
+				<div class="loging">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="24"
+						height="24"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-user">
+						<path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+						<circle cx="12" cy="7" r="4"></circle>
+					</svg>
+				</div>
 			</div>
 		</nav>
+		<header>
+			<div class="headertop">
+				<div class="headerleft">
+					<h2>HP zbook Dragon Fly 15</h2>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vitae
+						mollitia praesentium facilis nesciunt maxime rerum dolores molestias
+						dolorem aliquid.
+					</p>
+					<p>RAM 16GB | SSD 520GB | Processor @2.5GHZ 8CPUS</p>
+					<button>Buy Now</button>
+				</div>
+				<div class="headerRight">image</div>
+			</div>
+			<div class="headerDot">
+				<div class="dots"></div>
+				<div class="dots"></div>
+				<div class="dots"></div>
+			</div>
+		</header>
+		<section class="uniquines">
+			<div class="feature">
+				<div class="featureleft">icon</div>
+				<div class="featureRight">
+					<h6>Free delivery</h6>
+					<p>5 country delivery</p>
+				</div>
+			</div>
+		</section>
+
+		<section class="categories">
+			<div class="category">
+				<div class="categoryleft">icon</div>
+				<div class="categoryRight">
+					<h6>Computers</h6>
+				</div>
+			</div>
+		</section>
+
+		<section class="recentadded">
+			<div class="recentCardBig">
+				<div class="topRecentCard">
+					<img src="" alt="picha" />
+				</div>
+				<div class="bottomrecentCard">
+					<div class="price_rate">
+						<h1>$5000.99</h1>
+						<div class="starrate">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="24"
+								height="24"
+								viewBox="0 0 24 24"
+								fill="none"
+								stroke="currentColor"
+								stroke-width="2"
+								stroke-linecap="round"
+								stroke-linejoin="round"
+								class="feather feather-star">
+								<polygon
+									points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+							</svg>
+							7.9
+						</div>
+					</div>
+					<h4>Hp Pavilion</h4>
+					<p>RAM 16GB | SSD 520GB | Processor @2.5GHZ 8CPUS</p>
+					<div class="buttons">
+						<button>Buy now</button>
+						<button>Add To Cart</button>
+					</div>
+				</div>
+			</div>
+			<div class="recentCard">
+				<div class="topRecentCard">
+					<img src="" alt="picha" />
+				</div>
+				<div class="bottomrecentCard">
+					<div class="price_rate">
+						<h1>$5000.99</h1>
+					</div>
+					<h4>Hp Pavilion</h4>
+					<p>RAM 16GB | SSD 520GB | Processor @2.5GHZ 8CPUS</p>
+					<button>View Details</button>
+				</div>
+			</div>
+			<div class="recentCard">
+				<div class="topRecentCard">
+					<img src="" alt="picha" />
+				</div>
+				<div class="bottomrecentCard">
+					<div class="price_rate">
+						<h1>$5000.99</h1>
+					</div>
+					<h4>Hp Pavilion</h4>
+					<p>RAM 16GB | SSD 520GB | Processor @2.5GHZ 8CPUS</p>
+				</div>
+			</div>
+		</section>
+
+		<section class="Products">
+			<div class="productCard">
+				<div class="top">
+					<img src="" alt="Picha" />
+					<div class="cardButton">
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							width="24"
+							height="24"
+							viewBox="0 0 24 24"
+							fill="none"
+							stroke="currentColor"
+							stroke-width="2"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							class="feather feather-shopping-cart">
+							<circle cx="9" cy="21" r="1"></circle>
+							<circle cx="20" cy="21" r="1"></circle>
+							<path
+								d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+						</svg>
+					</div>
+				</div>
+				<div class="productCardBottom">
+					<h1>Price</h1>
+					<h3>Description</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, fugit.
+					</p>
+				</div>
+				<button>Buy Now</button>
+			</div>
+		</section>
 	</body>
 </html>
