--- a/index.html
+++ b/index.html
@@ -12,12 +12,32 @@
 			<div class="left">logo</div>
 			<div class="right">
 				<ul>
-					<li>Home</li>
-					<li>Products</li>
-					<li>About</li>
-					<li>Contacts</li>
+					<li><a href="">Home</a></li>
+					<li><a href="">Product</a></li>
+					<li><a href="">About</a></li>
+					<li><a href="">Contact</a></li>
 				</ul>
-				<div class="cardicon">cart here</div>
+				<div class="cardicon">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="24"
+						height="24"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-shopping-cart">
+						<circle cx="9" cy="21" r="1"></circle>
+						<circle cx="20" cy="21" r="1"></circle>
+						<path
+							d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+					</svg>
+					<div class="cartnumber">
+						<p>0</p>
+					</div>
+				</div>
 				<div class="loging">
 					<svg
 						xmlns="http://www.w3.org/2000/svg"
