complete design ya category and recent added

--- a/index.html
+++ b/index.html
@@ -78,10 +78,34 @@
 		</header>
 		<section class="uniquines">
 			<div class="feature">
+				<div class="featureleft">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<g data-name="Layer 2">
+							<g data-name="car">
+								<rect width="24" height="24" opacity="0" />
+								<path
+									d="M21.6 11.22L17 7.52V5a1.91 1.91 0 0 0-1.81-2H3.79A1.91 1.91 0 0 0 2 5v10a2 2 0 0 0 1.2 1.88 3 3 0 1 0 5.6.12h6.36a3 3 0 1 0 5.64 0h.2a1 1 0 0 0 1-1v-4a1 1 0 0 0-.4-.78zM20 12.48V15h-3v-4.92zM7 18a1 1 0 1 1-1-1 1 1 0 0 1 1 1zm5-3H4V5h11v10zm7 3a1 1 0 1 1-1-1 1 1 0 0 1 1 1z" />
+							</g>
+						</g>
+					</svg>
+				</div>
+				<div class="featureRight">
+					<h6>Free delivery</h6>
+					<p>5 country</p>
+				</div>
+			</div>
+			<div class="feature">
 				<div class="featureleft">icon</div>
 				<div class="featureRight">
 					<h6>Free delivery</h6>
-					<p>5 country delivery</p>
+					<p>5 country</p>
+				</div>
+			</div>
+			<div class="feature">
+				<div class="featureleft">icon</div>
+				<div class="featureRight">
+					<h6>Free delivery</h6>
+					<p>5 country</p>
 				</div>
 			</div>
 		</section>
@@ -93,12 +117,86 @@
 					<h6>Computers</h6>
 				</div>
 			</div>
+			<div class="category">
+				<div class="categoryleft">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="24"
+						height="24"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-cpu">
+						<rect x="4" y="4" width="16" height="16" rx="2" ry="2"></rect>
+						<rect x="9" y="9" width="6" height="6"></rect>
+						<line x1="9" y1="1" x2="9" y2="4"></line>
+						<line x1="15" y1="1" x2="15" y2="4"></line>
+						<line x1="9" y1="20" x2="9" y2="23"></line>
+						<line x1="15" y1="20" x2="15" y2="23"></line>
+						<line x1="20" y1="9" x2="23" y2="9"></line>
+						<line x1="20" y1="14" x2="23" y2="14"></line>
+						<line x1="1" y1="9" x2="4" y2="9"></line>
+						<line x1="1" y1="14" x2="4" y2="14"></line>
+					</svg>
+				</div>
+				<div class="categoryRight">
+					<h6>CPUS</h6>
+				</div>
+			</div>
+			<div class="category">
+				<div class="categoryleft">icon</div>
+				<div class="categoryRight">
+					<h6>Laptops</h6>
+				</div>
+			</div>
+			<div class="category">
+				<div class="categoryleft">icon</div>
+				<div class="categoryRight">
+					<h6>Keyboard</h6>
+				</div>
+			</div>
+			<div class="category">
+				<div class="categoryleft">icon</div>
+				<div class="categoryRight">
+					<h6>Mouse</h6>
+				</div>
+			</div>
+			<div class="category">
+				<div class="categoryleft">icon</div>
+				<div class="categoryRight">
+					<h6>Chargers</h6>
+				</div>
+			</div>
+			<div class="category">
+				<div class="categoryleft">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="24"
+						height="24"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-smartphone">
+						<rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
+						<line x1="12" y1="18" x2="12.01" y2="18"></line>
+					</svg>
+				</div>
+				<div class="categoryRight">
+					<h6>Smart Phone</h6>
+				</div>
+			</div>
 		</section>
 
 		<section class="recentadded">
 			<div class="recentCardBig">
-				<div class="topRecentCard">
-					<img src="" alt="picha" />
+				<div class="topRecentCardbig">
+					<img src="/img/Products/1.jpg" alt="picha" />
 				</div>
 				<div class="bottomrecentCard">
 					<div class="price_rate">
@@ -129,29 +227,33 @@
 					</div>
 				</div>
 			</div>
-			<div class="recentCard">
-				<div class="topRecentCard">
-					<img src="" alt="picha" />
-				</div>
-				<div class="bottomrecentCard">
-					<div class="price_rate">
-						<h1>$5000.99</h1>
+
+			<div class="zote">
+				<div class="recentCard">
+					<div class="topRecentCard">
+						<img src="/img/Products/product-07.jpg" alt="picha" />
 					</div>
-					<h4>Hp Pavilion</h4>
-					<p>RAM 16GB | SSD 520GB | Processor @2.5GHZ 8CPUS</p>
-					<button>View Details</button>
-				</div>
-			</div>
-			<div class="recentCard">
-				<div class="topRecentCard">
-					<img src="" alt="picha" />
-				</div>
-				<div class="bottomrecentCard">
-					<div class="price_rate">
-						<h1>$5000.99</h1>
+					<div class="bottomrecentCardsmal">
+						<div class="price_ratesmall">
+							<h1>$5000.99</h1>
+						</div>
+						<h4>Hp Pavilion</h4>
+						<p>RAM 16GB | SSD 520GB | Processor @2.5GHZ 8CPUS</p>
+						<button>View Details</button>
 					</div>
-					<h4>Hp Pavilion</h4>
-					<p>RAM 16GB | SSD 520GB | Processor @2.5GHZ 8CPUS</p>
+				</div>
+				<div class="recentCard">
+					<div class="topRecentCard">
+						<img src="/img/Products/product-14.jpg" alt="picha" />
+					</div>
+					<div class="bottomrecentCardsmal">
+						<div class="price_ratesmall">
+							<h1>$5000.99</h1>
+						</div>
+						<h4>Hp Pavilion</h4>
+						<p>RAM 16GB | SSD 520GB | Processor @2.5GHZ 8CPUS</p>
+						<button>View Details</button>
+					</div>
 				</div>
 			</div>
 		</section>
